# hello-world

./: README.md
hello-aks/: README.md  account-and-resource-group.azcli  account-and-resource-group.sh  aks-stdlb.azcli  hello.azcli
hello-cpp/: README.md
hello-cpp/hello-cmake/: CMakeLists.txt  README.md  hello-cmake.cpp
hello-cpp/hello-headers/: hello_headers.cpp  mylibrary.cpp  mylibrary.h
hello-cuda/: README.md
hello-docker/: README.md
hello-docker/hello-docker-dev/: README.md
hello-docker/hello-docker-gpu/: Dockerfile  README.md
hello-docker/hello-docker-gui/: Dockerfile  README.md
hello-docker/hello-docker-volumes/: README.md
hello-docker/hello-dockerfile/: Dockerfile  README.md  python_dockerfile.txt
hello-ml/: README.md  hello_autograd.ipynb  hello_data_generation.ipynb  hello_huggingface.py  hello_keras.py  hello_numpy_pandas.ipynb  hello_pytorch.py  hello_stacking.ipynb  requirements.txt
hello-node/: README.md  server.js
hello-parse/: README.md  names.txt  parse_csv.py  parse_yaml.py  requirements.txt
hello-python/: README.md  hello-deepcopy.ipynb  hello-sympy.ipynb
hello-python/hello-argparse/: README.md  parse_args.py
hello-python/hello-async/: README.md  async.py  async_http.py
hello-python/hello-imports/: README.md  helpers.py  main.py
hello-python/hello-ml/: hello-backprop.ipynb  hello-convolution.ipynb  hello-numpy_hello-pandas.ipynb  requirements.txt
hello-python/hello-parse/: README.md  urls.txt  (+1 more)
hello-rest-api/: README.md  rest_api.py
hello-terraform/: .gitignore  README.md  hello.tf  terraform_azure_vars.sh
(+13 files in other folders)
